<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>cisdi-pms-service</artifactId>
        <groupId>com.cisdi</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>cisdi-bid-ext</artifactId>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>


    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>com.qygly</groupId>-->
        <!--            <artifactId>qygly-ext-jar-helper</artifactId>-->
        <!--            <version>1.0.0</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>com.qygly</groupId>
            <artifactId>qygly-ext-jar-helper</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../lib/qygly-ext-jar-helper-3.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.qygly</groupId>
            <artifactId>qygly-param</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../lib/qygly-param-3.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.qygly</groupId>
            <artifactId>qygly-shared</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../lib/qygly-shared-3.0-SNAPSHOT.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.8.6</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- 导出工具 -->
        <dependency>
            <groupId>org.jxls</groupId>
            <artifactId>jxls-poi</artifactId>
            <version>2.14.0</version>
        </dependency>
        <dependency>
            <groupId>com.deepoove</groupId>
            <artifactId>poi-tl</artifactId>
            <version>1.12.2</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>5.3.4</version>
        </dependency>
        <!--AMQP依赖，包含RabbitMQ-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>

        <!-- redis 缓存操作 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!--        腾讯云人脸检测sdk-->
        <dependency>
            <groupId>com.tencentcloudapi</groupId>
            <artifactId>tencentcloud-sdk-java</artifactId>
            <version>3.1.1006</version>
        </dependency>

        <!-- mpp文件解析 -->
        <dependency>
            <groupId>net.sf.mpxj</groupId>
            <artifactId>mpxj</artifactId>
            <version>12.2.0</version>
        </dependency>


        <!-- pdf添加水印 -->
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.11</version>
        </dependency>
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itext-asian</artifactId>
            <version>5.2.0</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.83</version>
        </dependency>


    </dependencies>

    <!--    <build>-->
    <!--        <plugins>-->
    <!--            &lt;!&ndash; Allatori plugin start &ndash;&gt;-->
    <!--            <plugin>-->
    <!--                <groupId>org.codehaus.mojo</groupId>-->
    <!--                <artifactId>exec-maven-plugin</artifactId>-->
    <!--                <version>1.2.1</version>-->
    <!--                <executions>-->
    <!--                    <execution>-->
    <!--                        <id>run-allatori</id>-->
    <!--                        <phase>package</phase>-->
    <!--                        <goals>-->
    <!--                            <goal>exec</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                </executions>-->
    <!--                <configuration>-->
    <!--                    <executable>java</executable>-->
    <!--                    <arguments>-->
    <!--                        <argument>-Xms128m</argument>-->
    <!--                        <argument>-Xmx512m</argument>-->
    <!--                        <argument>-jar</argument>-->
    <!--                        &lt;!&ndash; allatori混淆的jar文件目录 &ndash;&gt;-->
    <!--                        <argument>${project.basedir}/../obfuscate/allatori.jar</argument>-->
    <!--                        &lt;!&ndash; allatori混淆的配置文件&ndash;&gt;-->
    <!--                        <argument>${project.basedir}/../obfuscate/allatori-config.xml</argument>-->
    <!--                    </arguments>-->
    <!--                </configuration>-->
    <!--            </plugin>-->
    <!--            &lt;!&ndash; Allatori plugin end &ndash;&gt;-->
    <!--        </plugins>-->
    <!--    </build>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <!-- 重新指明资源文件位置 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>
    <!--无需打包为spring-boot程序运行，只要打成普通的jar包传到平台并刷新，即可。-->

</project>
